@startuml

title __ENEMY's Class Diagram__\n

  namespace Bomber {
    namespace Entity {
      namespace Enemy {
        class Bomber.Entity.Enemy.Balloon {
            + Balloon()
            + checkIfTileIsEmpty()
            + movement()
            + start()
            + update()
        }
      }
    }
  }
  

  namespace Bomber {
    namespace Entity {
      namespace Enemy {
        class Bomber.Entity.Enemy.BlockHead {
            + BlockHead()
            + start()
            + update()
        }
      }
    }
  }
  

  namespace Bomber {
    namespace Entity {
      namespace Enemy {
        abstract class Bomber.Entity.Enemy.Enemy {
            + strengthPoint : int
            # noiseRate : double
            # randomNoiseRate : double
            # updateCounter : int
            # updateRate : int
            + Enemy()
            + enemyIdleNoise()
            + setPlayer()
            # checkPlayer()
        }
      }
    }
  }
  

  namespace Bomber {
    namespace Entity {
      namespace Enemy {
        class Bomber.Entity.Enemy.EnemyAI {
            + EnemyAI()
            + getDirection()
            + goHorizontal()
            - goVertical()
        }
      }
    }
  }
  

  namespace Bomber {
    namespace Entity {
      namespace Enemy {
        class Bomber.Entity.Enemy.Needle {
            + Needle()
            + movement()
            + start()
            + update()
        }
      }
    }
  }
  

  namespace Bomber {
    namespace Entity {
      namespace Enemy {
        class Bomber.Entity.Enemy.SkullHead {
            + SkullHead()
            + movement()
            + start()
            + update()
        }
      }
    }
  }
  

  Bomber.Entity.Enemy.Balloon -up-|> Bomber.Entity.Enemy.Enemy
  Bomber.Entity.Enemy.BlockHead -up-|> Bomber.Entity.Enemy.Enemy
  Bomber.Entity.Enemy.Enemy -up-|> Bomber.Entity.Pawn
  Bomber.Entity.Enemy.Enemy o-- Bomber.Entity.Enemy.EnemyAI : enemyAI
  Bomber.Entity.Enemy.Enemy o-- Bomber.GameFunction.TimeCounter : noiseIdleCounter
  Bomber.Entity.Enemy.Enemy o-- Bomber.Entity.Player : player
  Bomber.Entity.Enemy.EnemyAI o-- Bomber.Entity.Enemy.Enemy : enemy
  Bomber.Entity.Enemy.EnemyAI o-- Bomber.Entity.Player : player
  Bomber.Entity.Enemy.Needle -up-|> Bomber.Entity.Enemy.Enemy
  Bomber.Entity.Enemy.SkullHead -up-|> Bomber.Entity.Enemy.Enemy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
